animations and 3d effect added

--- a/index.css
+++ b/index.css
@@ -18,12 +18,68 @@ body {
 
 .gallery {
 	display: flex;
-	gap: 0.35rem;
+	gap: 0.3rem;
+	perspective: 25rem;
 }
 
 .img {
-	width: 142px;
-	height: 527px;
-    background-size: cover;
-    background-position: center;
+	width: 100px;
+	height: 450px;
+	background-size: cover;
+	background-position: center;
+	transition: 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+    filter: grayscale(1) brightness(.5);
+}
+
+.img::before,
+.img::after {
+	content: "";
+	position: absolute;
+	width: 4rem;
+	height: 100%;
+    right: -1.3rem;
+}
+
+.img::after {
+	left: -1.3rem;
+}
+
+.img:hover {
+	transform: translateZ(5rem);
+	z-index: 4;
+    filter: grayscale(0) brightness(1);
+    width: 285px;
+}
+
+.img:hover + * {
+	transform: translateZ(3.5rem) rotateY(15deg);
+	z-index: 3;
+}
+
+.img:hover + * + * {
+	transform: translateZ(2.2rem) rotateY(10deg);
+	z-index: 2;
+}
+
+.img:hover + * + * + * {
+	transform: translateZ(1.1rem) rotateY(5deg);
+	z-index: 1;
+}
+
+.img:has(+ :hover) {
+	transform: translateZ(3.5rem) rotateY(-15deg);
+	z-index: 3;
+}
+
+.img:has(+ * + :hover) {
+	transform: translateZ(2.2rem) rotateY(-10deg);
+	z-index: 2;
+}
+
+.img:has(+ * + * + :hover) {
+	transform: translateZ(1.1rem) rotateY(-5deg);
+	z-index: 1;
+}
+
+.img.expand {
 }
